# hse-simplification-for-aphasia

./: .gitignore  pyproject.toml
data/: RuSimpleSentAphasia_200_generated.csv
research/: llama_storm_zero_shot.ipynb
